# mcc

./: .clang-format  .gitignore  makefile  meson.build  readme
doc/: alloc.rst  generate-html.py  mangling.rst  memory  parser.rst  syntax
include/mcc/: alloc.h  args.h  emit.h  errmsg.h  expr.h  file.h  fn_resolve.h  help.h  keyword.h  mangle.h  mcc.h  module.h  opt.h  parser.h  paths.h  settings.h  strlist.h  term.h  tokenize.h  type.h  use.h
include/mcc/utils/: error.h  file.h  utils.h
src/: alloc.c  args.c  build.c  debug.c  emit.c  err.c  errmsg.c  file.c  help.c  keyword.c  lex.c  main.c  mangle.c  mcc.c  mcc.h  mcc_compile.c  mcc_link.c  mcc_run.c  module.c  node.c  opts.c  p_block.c  p_fn.c  p_match.c  p_module.c  p_node.c  p_statement.c  p_type.c  p_use.c  p_utils.c  p_value.c  parse.c  parser.c  paths.c  settings.c  strlist.c  targets.c  term.c  tokenize.c  type.c
src/emit-llvm/: block.c  emit.c  fn_decl.c  fn_def.c  gen_type.c  llvm.h  module.c
src/parser/: call.c  dump.c  fn.c  is.c  use.c  value.c
src/utils/: error.c  file.c  utils.c
